--- a/plat-configs/cloud-config-admin-db.properties
+++ b/plat-configs/cloud-config-admin-db.properties
@@ -1,4 +1,4 @@
 #配置数据库连接属性
-micro.plat.db.datasource.url=jdbc:mysql://localhost:3306/jay_plat?characterEncoding=UTF-8
-micro.plat.db.datasource.username=root
-micro.plat.db.datasource.password=root
+micro.plat.admin.db.datasource.url=jdbc:mysql://localhost:3306/jay_plat?characterEncoding=UTF-8
+micro.plat.admin.db.datasource.username=root
+micro.plat.admin.db.datasource.password=root
