初始化datatable可编辑化数据页面

--- a/plat-admin-web/src/main/resources/application.properties
+++ b/plat-admin-web/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-#ç«¯å£é…ç½®
-server.port=8081
-#é…ç½®Spring MVC è§£æhtmlä½œè§†å›¾
+#ÅäÖÃSpring MVC ½âÎöhtml×÷ÊÓÍ¼,ThymeleafµÄÅäÖÃ
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.prefix=classpath:/templates/html/
 spring.thymeleaf.suffix=.html
-#Spring Sessioné…ç½®
+#Spring SessionÅäÖÃ
 spring.session.store-type=redis
 server.session.timeout=60
 spring.redis.host=127.0.0.1
-#Spring MVCå¯¹é™æ€æ–‡ä»¶çš„é…ç½®
+#Spring MVC¶Ô¾²Ì¬ÎÄ¼şµÄÅäÖÃ
 spring.resources.static-locations=classpath:/static/
+#µ÷ÓÃµÄÎ¢·şÎñ
+cloud.shop.comment.service=cloud-shop-comment-service1
+cloud.shop.user.service=cloud-shop-user-service1
