--- a/plat-admin-web/src/main/resources/application.properties
+++ b/plat-admin-web/src/main/resources/application.properties
@@ -9,5 +9,4 @@ spring.redis.host=127.0.0.1
 #Spring MVC对静态文件的配置
 spring.resources.static-locations=classpath:/static/
 #调用的微服务
-cloud.shop.comment.service=cloud-shop-comment-service1
-cloud.shop.user.service=cloud-shop-user-service1
+cloud.plat.admin.user.service=cloud-admin-service
