添加权限控制和微服务公共调用模块

--- a/plat-admin-web/src/main/resources/application.properties
+++ b/plat-admin-web/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.redis.host=127.0.0.1
 #Spring MVC对静态文件的配置
 spring.resources.static-locations=classpath:/static/
 #调用的微服务
-cloud.plat.admin.user.service=cloud-admin-service
+cloud.plat.admin.web.service=cloud-admin-service
