--- a/plat-config-server/pom.xml
+++ b/plat-config-server/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>jay-plat-config-server</name>
-	<description>jay-plat-config-server project for Spring Boot</description>
+	<description>plat-config-server project for Spring Boot</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
